--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -22,18 +22,22 @@ vi:
         invalid: không hợp lệ
         less_than: phải nhỏ hơn %{count}
         less_than_or_equal_to: phải nhỏ hơn hoặc bằng %{count}
+        model_invalid: Xác thực không thành công %{errors}
         not_a_number: không phải là số
         not_an_integer: phải là một số nguyên
         odd: phải là số lẻ
         other_than: cần phải khác %{count}
         present: cần phải để trắng
-        taken: đã có
         too_long: quá dài (tối đa %{count} ký tự)
         too_short: quá ngắn (tối thiểu %{count} ký tự)
         wrong_length: độ dài không đúng (phải là %{count} ký tự)
         required: "phải có"
         taken: "đã tồn tại"
   hello: Xin chào thế giới
+  login: "Đăng nhập"
+  logout: "Đăng xuất"
+  signup: "Đăng ký"
+  users_detail: "Người dùng"
   layouts:
     application:
       en: Tiếng Anh
@@ -49,7 +53,10 @@ vi:
       help_header: Trợ giúp
       home_header: Trang chủ
       login_header: Đăng nhập
+      logout_header: Đăng xuất
       logo_alt: sample app
+      profile: Trang cá nhân
+      setting: Thiết lập
   ruby_on_rails: Ruby on Rails
   ruby_on_rails_book: sách hướng dẫn Rails.
   ruby_on_rails_help: trang trợ giúp Rails.
@@ -102,3 +109,12 @@ vi:
       fail_mess_create: Tài khoản tạo không thành công.
     show:
       fail_mess_notfound: Không tìm thấy thông tin tài khoản.
+  sessions:
+    new:
+      email: "Email"
+      password: "Mật khẩu"
+      new_user: "Người dùng mới?"
+      signup_now: "Đăng ký ngay!"
+    create:
+      error_login: "Lỗi email hoặc mật khẩu"
+      success_login: "Đăng nhập thành công."
