--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -33,6 +33,11 @@ vi:
         too_long: quá dài (tối đa %{count} ký tự)
         too_short: quá ngắn (tối thiểu %{count} ký tự)
         wrong_length: độ dài không đúng (phải là %{count} ký tự)
+  follow:
+    follow: Theo dõi
+    followers: Người theo dõi
+    following: Đang theo dõi
+    unfollow: Bỏ theo dõi
   hello: Xin chào thế giới
   layouts:
     application:
@@ -200,6 +205,9 @@ vi:
     show:
       fail_mess_notfound: Không tìm thấy thông tin tài khoản.
       microposts: Bài đăng
+    show_follow:
+      microposts: Bài đăng
+      view_my_profile: xem hồ sơ của bạn
     update:
       fail_mess: Thay đổi không thành công.
       success_mess: Tài khoản đã được cập nhật
@@ -214,3 +222,8 @@ vi:
       next: KẾ TIẾP ›
       previous: ‹ TRANG TRƯỚC
       truncate: …
+  relationships:
+    create:
+      user_not_exist: "Người dùng không tồn tại"
+    destroy:
+      user_not_exist: "Người dùng không tồn tại"
