--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,7 +59,17 @@ en:
     activate: Activate
     greeting: Hi
     title: Sample app here
-    welcome: 'Welcome to the Sample App! Click on the link below to activate your account: '
+    welcome: Welcome to the Sample App! Click on the link below to activate your account:
+  password_resets:
+    edit:
+      confirmation: Password confirmation
+      password: Password
+      title: Reset passoword
+      update_password: Update password
+    new:
+      email: Email
+      submit: Send
+      title: Forgot password
   ruby_on_rails: Ruby on Rails
   ruby_on_rails_book: Ruby on Rails Tutorial book.
   ruby_on_rails_help: Rails Tutorial help page.
@@ -72,6 +82,7 @@ en:
       success_login: Login successfully
     new:
       email: Email
+      forgot_password: (forgot password)
       new_user: New user?
       password: Password
       rememberMe: Remember me on this computer
@@ -80,12 +91,21 @@ en:
     account_activated: Account activated!
     account_activation: Account activation
     account_not_activated: Account not activated. Check your email for the activation link.
+    email_not_found: Email address not found
+    email_sent: Email sent with password reset instructions
     error_messages:
       errors_count:
         other: The form contains %{count} error(s)
-    invalid_activation_link: Invalid activation link
-    user_not_found: User not found
+    expire_in: This link will expire in two hours.
     greeting: Hello
+    if_you_did_not_request: If you did not request your password to be reset, please ignore this email and your password will stay as it is.
+    invalid_activation_link: Invalid activation link
+    link_blow: 'To reset your password click the link below:'
+    password_reset: Password reset
+    user_not_found: User not found
+    cant_be_empty: "can't be empty"
+    password_has_been_reset: "Password has been reset."
+    can_not_reset_password: "Can not reset password"
   signup: Sign up
   static_pages:
     about:
